style.css
/*
100% Pure NZ website
Author: John-Allan Lambert
2023
*/

/* Fonts */
@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@700;900&display=swap");

/* Reset default margin/padding */
* {
  margin: 0;
  padding: 0;
}

/*
* Body (root)
*/
:root {
  font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;

  /* Colours */
  --accent: #01aaff;

  /* Colours light */
  --text-light: black;
  --bg-light: white;

  /* Colors dark */
  --text-dark: white;
  --bg-dark: #031016;

  /* Spacing */
  --section-spacing: 6rem;
  --spacing: 3rem;

  /* Misc */
  --transition: 0.2s ease-in-out;
}

/* Typography */
h1,
h2 {
  font-family: "Nunito", sans-serif;
}

h1 {
  font-size: 2.5rem;
  margin-bottom: 1rem;
}

h2 {
  font-size: 1.5rem;
  margin-bottom: 0.5rem;
}

a,
[role="link"] {
  color: var(--accent);

  text-decoration: none;
  -webkit-text-decoration: none;
}

a:hover,
[role="link"] {
  text-decoration: underline;
  -webkit-text-decoration: underline;
}

/*
* Constrained container
*/
.container {
  margin-left: auto;
  margin-right: auto;
  max-width: 1440px;
  padding-left: 20px;
  padding-right: 20px;
  position: relative;
}

@media (min-width: 920px) {
  .container {
    padding-left: 70px;
    padding-right: 70px;
  }
}

/*
* Misc styling
*/
.rounded {
  border-radius: 0.5rem;
}

.shadow {
  box-shadow: 0px 0px 24px -12px rgba(0, 0, 0, 0.5);
  -webkit-box-shadow: 0px 0px 24px -12px rgba(0, 0, 0, 0.5);

  transition: box-shadow var(--transition), -webkit-box-shadow var(--transition);
}

/*
* Sections
*/
/* Header section (hero) */
header {
  color: var(--text-dark);
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("./public/pexels-photo-2586067.jpeg");
  background-size: cover;
  background-position: center;
}

/* Add spacing to bottom of sections */
section,
header,
main {
  margin-bottom: var(--section-spacing);
}

footer {
  color: var(--text-dark);
  background-color: var(--bg-dark);
  padding-top: var(--spacing);
  padding-bottom: var(--spacing);
}

/*
* Navbar 
*/
nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 100; /* Make sure the navbar stays on top of other elements */
}

nav .container {
  display: flex;
  color: var(--text-dark);
  justify-content: space-between;
  align-items: center;
  padding-top: 1rem;
  padding-bottom: 1rem;

  transition: background-color var(--transition);
}

nav .navbar-solid {
  color: var(--text-light);
  background-color: var(--bg-light);
}

/* Reset default styling on lists */
nav .container ul {
  list-style-type: none;
}

/* Position nav items correctly */
nav .container li {
  display: inline;
}

/* Padding betweeen nav items */
nav .container li:not(:last-of-type) {
  padding-right: 1rem;
}

/* Reset default styling on links */
nav .container li a {
  color: inherit;
  text-decoration: none;
}

/* Underline links on hover */
nav .container li a:hover {
  text-decoration: underline;
}

/* Make active link bold */
nav .container li a.active {
  font-weight: bold;
}

/* 
* Hero 
*/
.hero {
  display: flex;
  padding-top: 10rem;
  padding-bottom: 10rem;
  text-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
}

/* Restrict width on titles */
.hero hgroup {
  max-width: 600px;
}

/*
* Grid 
*/
.row,
.col {
  display: flex;
}

.row {
  flex-flow: row wrap;
}

.col {
  flex-flow: column wrap;
}

/*
Statistic section
*/
.stats {
  /* now this is how you write clean css */
  color: var(--text-dark);
  background-color: var(--bg-dark);
  padding-top: var(--spacing);
  padding-bottom: var(--spacing);
}

.stats .row {
  /* center columns except for first and last columns */
  justify-content: space-between;
}

.stats h1 {
  margin-bottom: 1rem;
  font-size: 3.5rem;
}

.stats .col {
  margin: auto;
  margin-bottom: var(--spacing);
  justify-content: center;
  align-items: center;
  text-align: center;
  max-width: 15rem;
}

@media (min-width: 576px) {
  .stats .col {
    margin: 0;
    margin-bottom: var(--spacing);
  }
}

/*
* Info section
*/

/* Make text fill up the space */
.info .text {
  flex: 1;
}

/*  For every odd (even starting from 0) row, 
reverse the row direction so that the image is on the right */
.info > .row:nth-child(even) {
  flex-flow: row-reverse wrap;
}

/* no one reads these anyway so im just going to say i have ligma */

/* Bottom margin seperating the rows */
.info .row {
  margin-bottom: var(--section-spacing);
}

/* ligma balls haha */

/* On mobile, make image fill width and add spacing on bottom */
.info .row .col img {
  width: 100%;
  margin-bottom: var(--spacing);
}

/* Screens larger than mobile */
@media (min-width: 576px) {
  /* Image size and margin */
  .info .row .col img {
    width: 480px;
    margin-right: var(--spacing);
    margin-bottom: 0;
  }

  /* Margin for images inside a row that is reversed */
  .info > .row:nth-child(even) > .col:first-of-type > img {
    margin-left: var(--spacing);
    margin-right: 0;
  }
}

